reduce the max-height on Listings to prevent overflow of records

--- a/farm-connect-frontend/src/containers/Listings/Listings.css
+++ b/farm-connect-frontend/src/containers/Listings/Listings.css
@@ -14,7 +14,7 @@
 
 #listings-main {
     width: 100%;
-    max-height: 50vh;
+    max-height: 49vh;
     overflow-y: auto;
     border-top: 2px solid #3a5f0b;
 }
